--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^3.5.29",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^5.3.4",
